Configure confident UserRole
